syntax = "proto3";
package dst.ass2.service.api.auth.proto;
option java_package = "dst.ass2.service.api.auth.proto";
option java_multiple_files = true;

service AuthService {
  rpc authenticate(AuthenticationRequest) returns (AuthenticationResponse);
  rpc validateToken(TokenValidationRequest) returns (TokenValidationResponse);
}

message AuthenticationRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationResponse {
  string token = 1;
  bool success = 2;
  string message = 3;
}

message TokenValidationRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool valid = 1;
  string message = 2;
}
